@@ -33,6 +33,8 @@
 #include <unistd.h>
 #include <sstream>
 #include <vector>
+#include <netdb.h>
+
 using namespace std;
 
 #ifndef AF_LOCAL
@@ -48,12 +50,14 @@ void usage()
     printf("\n -a    do not take into account acknowledged events.\n");
 }
 
+
 int main(int argc, char** argv)
 {
     // Parse arguments
     char *host                = NULL;
     char *remote_host         = NULL;
     char *remote_hostaddress  = NULL;
+    char  remote_hostipaddress[64];
     int   remote_port         = 6558;
     char *application         = NULL;
     bool  ignore_acknowledged = false;
@@ -96,7 +100,21 @@ int main(int argc, char** argv)
     }
 
     if (remote_host) {
+        struct hostent *he;
+        struct in_addr **addr_list;
+
         remote_hostaddress = strtok(remote_host, ":");
+        if ( (he = gethostbyname( remote_hostaddress ) ) == NULL)
+        {
+            printf("UNKNOWN - Unable to resolve remote host address: %s\n", remote_hostaddress);
+            return 3;
+        }
+        addr_list = (struct in_addr **) he->h_addr_list;
+        for(int i = 0; addr_list[i] != NULL; i++)
+        {
+            strcpy(remote_hostipaddress, inet_ntoa(*addr_list[i]) );
+        }
+
         char *port_str     = strtok(NULL, ":");
         if (port_str)
             remote_port    = atoi(port_str);
@@ -109,17 +127,19 @@ int main(int argc, char** argv)
         sock = socket(AF_INET, SOCK_STREAM, 0);
         tv.tv_sec = 10;
         setsockopt(sock, SOL_SOCKET, SO_RCVTIMEO, (struct timeval *)&tv, sizeof(struct timeval));
+        // Right now, there is no send timeout..
+        // setsockopt(sock, SOL_SOCKET, SO_SNDTIMEO, (struct timeval *)&tv, sizeof(struct timeval));
 
         struct sockaddr_in addr;
         memset(&addr, 0, sizeof(addr));
         addr.sin_family = AF_INET;
-        inet_aton(remote_hostaddress, &addr.sin_addr);
+        inet_aton(remote_hostipaddress, &addr.sin_addr);
         addr.sin_port = htons(remote_port);
 
         if (0 > connect(sock, (struct sockaddr*) &addr, sizeof(struct sockaddr_in)))
         {
             printf("UNKNOWN - Cannot connect to event daemon via TCP %s:%d (%s)\n",
-                   remote_hostaddress, remote_port, strerror(errno));
+                   remote_hostipaddress, remote_port, strerror(errno));
             exit(3);
         }
     }
