@@ -34,6 +34,7 @@
     * 1043 FIX: printer_supply: fix value error in default parameters...
     * 0626 FIX: veeam_jobs: agent now supports output lines longer than 80 chars
     * 1072 FIX: printer_supply: fix colors of Perf-O-Meter on HP OfficeJet...
+    * 0950 FIX: check_mkevents: now able to resolve the hostname of the remote hosts...
 
     Multisite:
     * 1013 Sort host names naturally, e.g. foobar11 comes after foobar2...
